@@ -44,7 +44,7 @@
 
 #define	IFLEVELINC	5	/* #if nesting level size increment */
 
-static char const rcsid[] = "$Id: scanner.l,v 1.8 2007/03/09 23:54:34 broeker Exp $";
+static char const rcsid[] = "$Id: scanner.l,v 1.9 2010/03/04 21:07:17 broeker Exp $";
 
 int	first;	/* buffer index for first char of symbol */
 int	last;	/* buffer index for last char of symbol */
@@ -574,6 +574,8 @@ class{ws}+{identifier}({wsnl}|[a-zA-Z0-9_():])*\{	{	/* class definition */
 			char	*s;
 			
 			s = strpbrk(yytext, "\"<");
+			if (!s)
+				return(LEXERR);
 			incfile(s + 1, s);
 			/* HBB: avoid pointer mismatch if yytext is
 			 * unsigned, or a pointer */
